--- a/app/components/Navigation/links.module.css
+++ b/app/components/Navigation/links.module.css
@@ -8,14 +8,14 @@
 
 .link::after {
 	content: '';
-	@apply border-primary w-2 border block hover:w-full absolute top-full left-1/2 -translate-x-1/2 transition-width duration-200 ease-soft-spring active:border-accent;
+	@apply bg-primary h-1 w-2 block hover:w-full absolute top-full left-1/2 -translate-x-1/2 transition-width duration-200 ease-soft-spring active:bg-accent;
 }
 
 .link.active::after {
 	content: '';
-	@apply border-primary border block w-full absolute left-1/2 -translate-x-1/2;
+	@apply bg-primary h-1 w-full block absolute left-1/2 -translate-x-1/2;
 }
 
 .active {
-	@apply cursor-default pointer-events-none text-opacity-75 relative;
+	@apply cursor-default pointer-events-none relative;
 }
