--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 p {
-	@apply lg:text-2xl text-lg font-body_font;
+	@apply lg:text-xl 2xl:text-2xl text-lg font-body_font;
 }
 
 .backdrop {
