--- a/app/components/Navigation/links.module.css
+++ b/app/components/Navigation/links.module.css
@@ -8,7 +8,7 @@
 
 .link::after {
 	content: '';
-	@apply bg-primary h-1 block hover:w-full absolute top-full left-1/2 -translate-x-1/2 transition-width duration-500 ease-soft-spring active:w-[150%];
+	@apply bg-primary h-1 w-0 block hover:w-full absolute top-full left-1/2 -translate-x-1/2 transition-width duration-500 ease-soft-spring active:w-[150%];
 }
 
 .link.active::after {
