--- a/app/components/elements/Blob.module.css
+++ b/app/components/elements/Blob.module.css
@@ -29,7 +29,7 @@
 	);
 	animation: rotate 20s infinite;
 	z-index: 1;
-	@apply h-52 lg:h-96 opacity-80 lg:opacity-100;
+	@apply h-52 lg:h-96 opacity-60 2xl:opacity-80;
 }
 
 .blur {
