--- a/app/components/elements/About_Me/techTable.module.css
+++ b/app/components/elements/About_Me/techTable.module.css
@@ -1,11 +1,7 @@
 .container {
-	@apply flex flex-wrap lg:flex-nowrap w-full justify-between lg:gap-20;
-}
-
-.category {
-	@apply w-1/2 lg:w-full h-fit;
+	@apply grid grid-cols-2;
 }
 
 .techList {
-	@apply flex flex-wrap gap-x-10;
+	@apply flex flex-wrap 2xl:gap-x-10;
 }
