--- a/app/components/elements/Projects/slider.module.css
+++ b/app/components/elements/Projects/slider.module.css
@@ -1,5 +1,5 @@
 .carousel {
-	@apply cursor-grab overflow-hidden;
+	@apply cursor-grab overflow-hidden relative;
 }
 
 .innerCarousel {
@@ -7,10 +7,12 @@
 }
 
 .item {
-	min-height: 40rem;
 	min-width: 20%;
 }
 
 .image {
 	@apply rounded-3xl pointer-events-none;
+}
+
+.item0 {
 }
