feat: project slider

--- a/app/components/elements/Projects/slider.module.css
+++ b/app/components/elements/Projects/slider.module.css
@@ -3,11 +3,7 @@
 }
 
 .innerCarousel {
-	@apply flex gap-10;
-}
-
-.item {
-	min-width: 20%;
+	@apply flex  transition-transform duration-1000 ease-soft-spring;
 }
 
 .image {
