dev: basic infinte scroll at item level

--- a/app/components/elements/Projects/slider.module.css
+++ b/app/components/elements/Projects/slider.module.css
@@ -3,7 +3,7 @@
 }
 
 .innerCarousel {
-	@apply flex  transition-transform duration-1000 ease-soft-spring;
+	@apply flex duration-1000 ease-soft-spring;
 }
 
 .image {
