--- a/app/components/elements/Blob.module.css
+++ b/app/components/elements/Blob.module.css
@@ -33,8 +33,8 @@
 }
 
 .blur {
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	position: fixed;
 	z-index: 2;
 	backdrop-filter: blur(8vmax);
