feat: Add swiper/react

--- a/app/components/elements/Projects/slider.module.css
+++ b/app/components/elements/Projects/slider.module.css
@@ -3,12 +3,9 @@
 }
 
 .innerCarousel {
-	@apply flex;
+	@apply flex ease-soft-spring duration-300;
 }
 
 .image {
 	@apply rounded-3xl pointer-events-none;
-}
-.carouselItem {
-	@apply duration-300 ease-soft-spring;
 }
