--- a/app/components/elements/Projects/slider.module.css
+++ b/app/components/elements/Projects/slider.module.css
@@ -1,11 +1,23 @@
 .carousel {
-	@apply cursor-grab overflow-hidden relative;
+	@apply cursor-grab overflow-hidden;
 }
 
 .innerCarousel {
-	@apply flex ease-soft-spring duration-300;
+	@apply flex touch-pan-y;
 }
 
 .image {
 	@apply rounded-3xl pointer-events-none;
+}
+
+.dot {
+	@apply bg-accent bg-opacity-50 w-3 aspect-square rounded-full border border-glass;
+}
+
+.dots {
+	@apply flex justify-center my-5 gap-2 w-3/4 lg:w-1/2 2xl:w-4/12 mx-auto;
+}
+
+.activeDot {
+	@apply bg-opacity-90 bg-primary;
 }
